[metadata]
name = qstyler
author = alexpdev
url = https://github.com/alexpdev/qstyler
author_email = alexpdev@pm.me
version = attr: QStyler.version.__version__
dependencies = PySide6
description = QStyleSheet testing application.
keywords = Qt, GUI, QStyleSheet, qss
license = Apache Software License
readme = file: README.md
requires_python = >=3.6
classifiers =
    Development Status :: 4 - Beta,
    Intended Audience :: Developers,
    License :: OSI Approved :: Apache Software License,
    Operating System :: OS Independent,
    Programming Language :: Python :: 3.5,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    Programming Language :: Python :: 3.11,

[options]
include_package_data = True
packages = QStyler
